css/site.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);

html {
  font: 18px/1.6 'Open Sans', sans-serif;
}


@media (max-width: 325px) {
  html { font: 17px/1.6 'Open Sans', sans-serif; }
}

body {
  margin: 2rem 0 5rem;
  color: #222;
}

@media (min-width: 30rem) {
  body {
    margin-top: 5rem;
  }
}

a {
  color: #0074d9; /* From http://clrs.cc */
  text-decoration: none;
}

a:hover, a:focus {
  text-decoration: underline;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0 0 0.5rem -0.1rem /* align left edge */;
  color: #111;
  text-rendering: optimizeLegibility;
  font-family: 'Open Sans', serif;
  line-height: 1.2
}

@media (max-width: 750px) {
h1, h2, h3, h4, h5, h6 {
  margin-left: 0 !important;
  margin-right: 0 !important;
 }
}

h1 {
  font-size: 2.5rem;
  /*margin-bottom: 2.5rem;*/
  font-weight: 700;
  margin-left: -2rem;
  margin-right: -2rem;
}

@media (min-width: 30rem) {
  h1 {
    font-size: 4rem;
    /*margin-bottom: 10rem;*/
  }
}

h1 a {
  color: inherit;
}

h2 {
  margin-top: 2rem;
  font-size: 1.75rem;
  font-weight: 500;
  margin-bottom: 5rem;
  color: #555;
  text-align: right;
  margin-right: -4rem;
}

@media (min-width: 30rem) {
  h2 {
    margin-top: 2.5rem;
    font-size: 1.75rem;
    margin-bottom: 8rem;
    margin-right: -4rem;
  }
}

h3 {
  margin: 2rem -2rem 1.75rem -2rem;
  margin-top: 2rem;
  font-size: 1.75rem;
}

@media (min-width: 30rem) {
  h3 {
    margin-top: 2.5rem;
    font-size: 2rem;
    margin-bottom: 1.5rem;
  }
}

h4, h5, h6 {
  margin: 1.5rem -1rem 1.5rem -1rem;
  font-size: 1.5rem;
}

p, ul, ol, dl, table, pre, blockquote {
  margin-top: 0;
  margin-bottom: 1.5rem;
}

ul, ol {
  padding-left: 1.5rem;
}

dd {
  margin-left: 1.5rem;
}

blockquote {
  margin-left: 0.75rem;
  margin-right: 0;
  padding: 0rem 0.8rem;
  border-left: .3rem solid #ccc;
  color: #555;
}

blockquote p:last-child {
  margin-bottom: 0;
}

.footnote {
  color: #444;
}

.center {
  display:inline-block;
  margin: 0 auto;
}

hr {
  border: none;
  /*margin: 1.5rem 0;*/
  border-bottom: 1px solid #ccc;
  position: relative;
  top: -1px;
}

.img, .container iframe {
  max-width: 100%;
}

a {
word-wrap: break-word;
}

.container img {
  margin: 2em auto 2em auto;
  display: block;
  max-width: 75%;
}

@media (max-width: 635px) {
.container img {
 max-width: 100%
 }
}

table {
  width: 100%;
  border: 1px solid #ccc;
  border-collapse: collapse;
}

td, th {
  padding: .25rem .5rem;
  border: 1px solid #ccc;
}

pre, code {
  font-family: monospace;
  background-color: #eee;
}

pre {
  padding: .5rem 1rem;
  font-size: 0.8rem;
}

code {
  padding: .1rem .25rem;
}

pre > code {
  padding: 0;
}

#profile-img {
  min-width: 25px;
  min-height: 25px;
  max-width: 150px;
  max-height: 150px;
  -webkit-filter: grayscale(100%);
  border-radius: 50%;
  -webkit-transform: rotate(-10deg);
     -moz-transform: rotate(-10deg);
       -o-transform: rotate(-10deg);
      -ms-transform: rotate(-10deg);
          transform: rotate(-10deg);

  padding: 4px;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid #dddddd;
  transition: all 0.2s ease-in-out;
  display: table-cell;
  max-width: 100%;
  height: auto;
}

#profile-img:hover {
  -webkit-filter: grayscale(0%);
  border-radius: 0%;
  -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
      transform: rotate(0deg);
}

#profile-links {
  text-align: center;
}

.shadow {
  box-shadow: 10px 10px 5px #888;
}

.container {
  max-width: 625px;
  margin: 0 auto;
  padding: 0 0.75rem;
}

.sharing {
  text-align: center;
}

.date {
  text-align: right;
  font-size: 75%;
  font-style: italic;
}

@media (max-width: 635px) {
.sharing {
 font-size: 85%;
 }
}

/* This gets Google to fall into place */
.social {
 text-align: right;
}

.topsocial {
	margin-bottom: 5em;
}

/* This gets Facebook to fall into place */
.social iframe {
	vertical-align: middle;
}

/* Set an optional width for your button wrappers */
.social span {
	display: inline-block;
	width: 110px;
}

/* Adjust the widths individually if you like */
.social .google {
	width: 75px;
}

.button {
  margin-top: 2em;
  margin-left: 1em;
  display: inline-block;
  border: 2px solid #111;
  border-radius: 0.4em;
  padding: 0.1em 0.75em;
  font-size: 17px;
  color: #111;
  text-align: center;
}

.button:hover {
	color: white;
	background-color: #111;
	cursor: pointer;
	text-decoration: none;
	transition: 0.5s;
}

.Facebook {
	transform: scale(1.25);
}

.sharing-buttons {
	width: 100%;
}
}

